Bug 842611 - Don't let nsOfflineCacheDevice::Init() create mozStorageService on non-main thread, r=michal